@@ -13,8 +13,8 @@
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
-    <dependencies>
 
+    <dependencies>
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -25,33 +25,23 @@
             <artifactId>javafx-fxml</artifactId>
             <version>21.0.2</version>
         </dependency>
+
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
             <version>21.0.2</version>
         </dependency>
         <dependency>
-            <groupId>org.json</groupId>
-            <artifactId>json</artifactId>
-            <version>20160810</version>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-base</artifactId>
+            <version>21.0.2</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
-            <artifactId>javafx-web</artifactId>
-            <version>17.0.6</version>
-        </dependency>
-        <dependency>
-            <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
-            <version>1.32.1</version>
-        </dependency>
-        <dependency>
-            <groupId>com.sun.mail</groupId>
-            <artifactId>javax.mail</artifactId>
-            <version>1.6.2</version>
+            <artifactId>javafx-graphics</artifactId>
+            <version>21.0.2</version>
         </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
@@ -59,22 +49,10 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>0.0.8</version>
                 <configuration>
-                    <mainClass>test.UserTest.MainFx</mainClass>
-                    <options>
-                        <option>--add-modules=javafx.swing,javafx.graphics,javafx.fxml,javafx.media,javafx.web</option>
-                        <option>--add-opens javafx.controls/com.sun.javafx.charts=ALL-UNNAMED</option>
-                        <option>--add-opens javafx.graphics/com.sun.javafx.iio=ALL-UNNAMED</option>
-                        <option>--add-opens javafx.graphics/com.sun.javafx.iio.common=ALL-UNNAMED</option>
-                        <option>--add-opens javafx.graphics/com.sun.javafx.css=ALL-UNNAMED</option>
-                        <option>--add-opens javafx.base/com.sun.javafx.runtime=ALL-UNNAMED</option>
-                    </options>
+                    <mainClass>test.ServiceApresVenteTest.MainFx</mainClass>
                 </configuration>
-
-
-
             </plugin>
         </plugins>
     </build>
-
 
 </project>
